# minimal-ascii-reader

./: CMakeLists.txt  README.md
include/: AsciiLineReader.h  AsciiStreamReader.h  MARAssert.h
include/mar/: AsciiLineReader.h  AsciiStreamReader.h  MARAssert.h
src/: AsciiLineReader.cpp  AsciiStreamReader.cpp
